Fix content spacing

--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,5 @@
 body {
   display: flex;
-  align-items: center;
   flex-direction: column;
   height: 100%;
 }
@@ -11,6 +10,7 @@ body {
 }
 
 header {
+  align-self: center;
   flex: none;
   height: max-content;
   color: #141414;
@@ -118,6 +118,7 @@ main {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem 1.5rem;
+  margin: 0 auto;
   padding: 1rem 0;
   max-width: 800px;
   border-top: 1px solid #42240b63;
